--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-md-10 div-center">
+        <div id="formulario" class="col-md-10 div-center">
           <div class="form-group">
             <label for="title">Title:</label>
             <input type="text" class="form-control" id="title">
